# alpamayo-recipes

./: .gitignore  README.md
recipes/alpamayo1_5_sft/: README.md  pyproject.toml
recipes/alpamayo1_5_sft/configs/: sft_base.yaml
recipes/alpamayo1_5_sft/configs/vla_processor/: default.yaml  nav.yaml  vqa.yaml
recipes/alpamayo1_5_sft/models/: sft_alpamayo_r1.py  sft_base_model.py
recipes/alpamayo1_5_sft/tests/: test_stage1_vlm_loading.py
recipes/alpamayo1_sft/: README.md  SKILL.md  evaluate_hf.py  pyproject.toml  train_hf.py
recipes/alpamayo1_sft/configs/: sft_base.yaml  vla_processor.yaml
recipes/alpamayo1_sft/configs/models/: ar1_base.yaml  ar1_expert.yaml
recipes/alpamayo1_sft/configs/vla_processor/: default.yaml
recipes/alpamayo1_sft/models/: sft_alpamayo_r1.py
recipes/alpamayo1_sft/notebooks/: inspect_dataset.ipynb
recipes/alpamayo1_sft/tests/: test_stage1_vlm_loading.py
recipes/alpamayo1_x_rl/: pyproject.toml
recipes/alpamayo1_x_rl/diffusion/: flow_matching.py
recipes/alpamayo1_x_rl/models/expert_model/: README.md  (+6 more)
recipes/alpamayo1_x_rl/utils/: fsdp.py
scripts/: convert_checkpoint.py  convert_cosmos_rl_checkpoint.py  convert_release_config_to_training.py  curate_pai_samples.py  download_pai.py
src/: pyproject.toml
src/alpamayo/: config.py
src/alpamayo/chat_template/: __init__.py  components.py  r1.py  r1_5.py
src/alpamayo/common/: wandb_utils.py
src/alpamayo/data/: lingoqa.py  pai.py  pai_nav.py  pai_utils.py
src/alpamayo/metrics/: distance_metrics.py  metric_api.py  metric_runner.py
src/alpamayo/utils/: checkpoint_utils.py
